--- a/results/SpaceSheepAi/configuration.yaml
+++ b/results/SpaceSheepAi/configuration.yaml
@@ -3,16 +3,16 @@ behaviors:
   SpaceSheepAi:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 64
-      buffer_size: 12000
+      batch_size: 2048
+      buffer_size: 20480
       learning_rate: 0.0003
-      beta: 0.001
+      beta: 0.0005
       epsilon: 0.2
       lambd: 0.99
       num_epoch: 3
       learning_rate_schedule: linear
     network_settings:
-      normalize: true
+      normalize: false
       hidden_units: 128
       num_layers: 2
       vis_encode_type: simple
@@ -30,12 +30,12 @@ behaviors:
           memory: null
           goal_conditioning_type: hyper
     init_path: null
-    keep_checkpoints: 100
+    keep_checkpoints: 5
     checkpoint_interval: 500000
     max_steps: 600000
     time_horizon: 1000
     summary_freq: 12000
-    threaded: false
+    threaded: true
     self_play: null
     behavioral_cloning: null
 env_settings:
